[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Liniker <contato@liniker.com.br>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {version = "^0.52.0", extras = ["all"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
